--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,14 @@
     "target": "ES5",
     "newLine": "LF",
     "strictNullChecks": true,
-    "declaration": true
+    "declaration": true,
+    "lib": [
+      "ES2015",
+      "ES2016",
+      "ES2017",
+      "ES2018",
+      "DOM"
+    ]
   },
   "exclude": [
     "node_modules"
