docs: 添加README.md

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@indexeddb-tools/project",
+  "name": "indexeddb-tools-project",
   "license": "MIT",
   "type": "module",
   "scripts": {
